Update Repo Visualizer

--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
     <title>Java Repository</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="light">
+<body>
 
 <nav>
-    <h2>Java Programming SEM II</h2>
-    <button id="themeToggle">🌙</button>
+    <div class="nav-left">
+        <h2>Java Programming SEM II</h2>
+    </div>
+
+    <button id="themeToggle" class="theme-btn">
+        ☀️
+    </button>
 </nav>
 
 <main class="centered">
-    <h1>Java Journal Code Repository</h1>
+    <h1 class="project-title">Java Journal Code Repository</h1>
 
     <div class="nav-cards">
         <a href="viewer.html?folder=assign1" class="nav-card">
-            Assign 1
+            📁 Assign 1
         </a>
         <a href="viewer.html?folder=assign2" class="nav-card">
-            Assign 2
+            📁 Assign 2
         </a>
     </div>
 </main>
